# manifest

./: .gitignore  Cargo.toml
toml-parser/: Cargo.toml
toml-parser/src/: lib.rs
toml-schema-v1/: Cargo.toml
toml-schema-v1-to-v1/: Cargo.toml
toml-schema-v1-to-v1/src/: dependency.rs  lib.rs  profile.rs
toml-schema-v1/src/: dependency.rs  dependency_map.rs  lib.rs  manifest.rs  opt_level.rs  path_value.rs  platform.rs  profile.rs  profile_package_spec.rs  profiles.rs  project.rs  string_or_bool.rs  string_or_vec.rs  target.rs  u32_or_bool.rs  vec_string_or_bool.rs  workspace.rs
v1/: Cargo.toml
v1/src/: dependency.rs  git_reference.rs  git_repository.rs  into_url.rs  lib.rs  manifest.rs  metadata.rs  profile.rs  source.rs  workspace.rs
