[package]
name = "omni_manifest_toml_parser"
version = "1.0.0"
authors = ["Perry Birch <perrybirch@vizidrix.com>"]

[lib]
name = "omni_manifest_toml_parser"
path = "src/lib.rs"

[dependencies]
log = "0.4.8"
serde_ignored = "0.0.4"
toml = "0.5.1"

[dependencies.serde]
version = "1.0.98"
features = ["derive"]

[dependencies.failure]
version = "0.1.5"
default-features = false
features = ["std"]

[dependencies.omni-manifest-toml-schema-v1]
path = "../toml-schema-v1"
version = "1.0.0"

[dev-dependencies]
semver = "0.9.0"