[package]
name = "omni_manifest_toml_parser"
version = "1.0.0"
authors = ["Perry Birch <perrybirch@vizidrix.com>"]

[lib]
name = "omni_manifest_toml_parser"
path = "src/lib.rs"

[dependencies]
serde_ignored = "0.1.0"
toml = "0.5.3"

[dependencies.serde]
version = "1.0.99"
features = ["derive"]

[dependencies.omni-manifest-toml-schema-v1]
path = "../toml-schema-v1"
version = "1.0.0"

[dependencies.omni-manifest-toml-schema-v1-to-v1]
path = "../toml-schema-v1-to-v1"
version = "1.0.0"

[dependencies.omni-manifest-v1]
path = "../v1"
version = "1.0.0"

[dev-dependencies]
semver = "0.9.0"