[package]
name = "omni_manifest_toml_schema_v1_to_v1"
version = "1.0.0"
authors = ["Perry Birch <perrybirch@vizidrix.com>"]

[lib]
name = "omni_manifest_toml_schema_v1_to_v1"
path = "src/lib.rs"

[dependencies]

[dependencies.failure]
version = "0.1.5"

[dependencies.omni-manifest-toml-schema-v1]
path = "../toml-schema-v1"
version = "1.0.0"

[dependencies.omni_manifest_v1]
path = "../v1"
version = "1.0.0"

[dependencies.semver]
version = "0.9.0"

[dev-dependencies]
semver = "0.9.0"