[package]
name = "omni-manifest-toml-schema-v1"
version = "1.0.0"
authors = ["Perry Birch <perrybirch@vizidrix.com>"]

[lib]
name = "omni_manifest_toml_schema_v1"
path = "src/lib.rs"

[dependencies]
# log = "0.4.8"
toml = "0.5.1"
url = "2.1.0"
url_serde = "0.2.0"

# [dependencies.failure]
# version = "0.1.5"
# default-features = false
# features = ["std"]

[dependencies.semver]
version = "0.9.0"
features = ["serde"]

[dependencies.serde]
version = "1.0.98"
features = ["derive"]

# [dependencies.omni_manifest_v1]
# path = "../v1"

# [dev-dependencies]
# logging = { path = "../logging" }