[package]
name = "omni-manifest-toml-schema-v1"
version = "1.0.0"
authors = ["Perry Birch <perrybirch@vizidrix.com>"]

[lib]
name = "omni_manifest_toml_schema_v1"
path = "src/lib.rs"

[dependencies]
toml = "0.5.3"
url = "2.1.0"
url_serde = "0.2.0"

[dependencies.semver]
version = "0.9.0"
features = ["serde"]

[dependencies.serde]
version = "1.0.99"
features = ["derive"]